fix eslint issues

--- a/src/assets/scss/_myvariables.scss
+++ b/src/assets/scss/_myvariables.scss
@@ -13,3 +13,6 @@
  $input-padding-x: 7px;
  $input-padding-y: 7px;
  $input-height: 44px;
+
+
+  @import "./node_modules/bootstrap/scss/bootstrap.scss";
