add signup page, routes, components

--- a/src/assets/scss/_myvariables.scss
+++ b/src/assets/scss/_myvariables.scss
@@ -13,6 +13,7 @@
  $input-padding-x: 7px;
  $input-padding-y: 7px;
  $input-height: 44px;
+ $input-font-size: 14px;
 
 
-  @import "./node_modules/bootstrap/scss/bootstrap.scss";
+  @import "../../../node_modules/bootstrap/scss/bootstrap.scss";
