--- a/src/assets/scss/_myvariables.scss
+++ b/src/assets/scss/_myvariables.scss
@@ -46,10 +46,10 @@ $list-group-item-padding-x:         12px;
 // $list-group-item-bg-scale:          -80% !default;
 // $list-group-item-color-scale:       40% !default;
 
-// $list-group-hover-bg:               $gray-100 !default;
-// $list-group-active-color:           $component-active-color !default;
-// $list-group-active-bg:              $component-active-bg !default;
-// $list-group-active-border-color:    $list-group-active-bg !default;
+$list-group-hover-bg:               #091e4214;
+$list-group-active-color:           #172b4d;
+$list-group-active-bg:              #e4f0f6;
+$list-group-active-border-color:    none;
 
 // $list-group-disabled-color:         $gray-600 !default;
 // $list-group-disabled-bg:            $list-group-bg !default;
