add comment input, side task card dropdowns
added dropdown contents, date picker component, some ui tweaks

--- a/src/assets/scss/_myvariables.scss
+++ b/src/assets/scss/_myvariables.scss
@@ -61,6 +61,11 @@ $list-group-action-active-color:    #172b4d;
 $list-group-action-active-bg:       #E4F0F6;
 
 
+// modal
+
+$modal-md:                          768px !default;
+
+
   @import "../../../node_modules/bootstrap/scss/bootstrap.scss";
 
 
