add button styles

--- a/src/assets/scss/_myvariables.scss
+++ b/src/assets/scss/_myvariables.scss
@@ -1,6 +1,9 @@
  $primary: #0052CC;
  $success: #5AAC44;
 
+ $primary-1: #0079bf;
+ $primary-2: #026aa7;
+ 
 
  $input-bg: #FAFBFC;
  $input-border-color: #DFE1E6;
