--- a/src/assets/scss/globals.scss
+++ b/src/assets/scss/globals.scss
@@ -2,29 +2,52 @@
 @import './mixin';
 @import './myvariables';
 
-
 %btn-base {
-    border: none;
-    box-shadow: none;
-    color: #fff;
-    font-size: 14px;
-    padding: 6px 12px;
-    border-radius: 3px;
+  border: none;
+  box-shadow: none;
+  color: #fff;
+  font-size: 14px;
+  padding: 6px 12px;
+  border-radius: 3px;
 }
 
 .btn-primary {
-    &-1 {
-        @extend %btn-base;
-        background: $primary-1;
-        &:hover, &:active {
-            background: $primary-2;
-        }
+  &-1 {
+    @extend %btn-base;
+    background: $primary-1;
+    &:hover,
+    &:active {
+      background: $primary-2;
     }
-    &-2 {
-        @extend %btn-base;
-        background: $primary-2;
-        &:hover, &:active {
-            background: $primary-1;
-        }
+  }
+  &-2 {
+    @extend %btn-base;
+    background: $primary-2;
+    &:hover,
+    &:active {
+      background: $primary-1;
     }
+  }
+}
+
+.btn-icon {
+  color: #5e6c84;
+  padding: 4px 6px;
+  border-radius: 4px;
+  &:hover {
+    background: #091e4214;
+    color: #172b4d;
+  }
+}
+
+.dropdown-toggle {
+  &::after {
+    border: 0;
+    margin: 0;
+    display: none;
+  }
+  .caret-down {
+    width: 15px;
+    height: 15px;
+  }
 }
